--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
   "name": "orinoco-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is the back end server for Project 5 of the Junior Web Developer path.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
+  "author": "samuel",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
     "uuid": "^3.3.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SamuelPrigent/SamuelPrigent_5_02072021.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SamuelPrigent/SamuelPrigent_5_02072021/issues"
+  },
+  "homepage": "https://github.com/SamuelPrigent/SamuelPrigent_5_02072021#readme",
+  "devDependencies": {
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2"
   }
 }
