--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "webpack"
   },
   "author": "samuel",
   "license": "ISC",
@@ -22,6 +23,10 @@
   },
   "homepage": "https://github.com/SamuelPrigent/SamuelPrigent_5_02072021#readme",
   "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.8",
+    "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2"
   }
